<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:paddingLeft="@dimen/padding_side"
    android:paddingRight="@dimen/padding_side">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/form_margin_bot">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/formsize"/>
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/form_margin_bot">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/formsize"/>
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/form_bot">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textSize="@dimen/formsize"/>
            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/records"
            android:textSize="@dimen/record_size"
            android:textColor="@color/pink"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/btn_bot"
        >
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:textSize="@dimen/btn_size"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/btn_right"
            android:onClick="onWrite"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textSize="@dimen/btn_size"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/btn_right"
            android:onClick="onRead"/>
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="@dimen/btn_size"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/btn_right"
            android:onClick="onUpdate"/>
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textSize="@dimen/btn_size"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/btn_right"
            android:onClick="onRemove"/>
    </LinearLayout>
</LinearLayout>
